# mole

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  SPEC.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.claude/skills/mole/: SKILL.md
examples/: playground.py
examples/test_projects/: fizzbuzz.py  string_utils.ts
mole/: __init__.py  __main__.py  cache.py  cli.py  context.py  display.py  few_shot.py  fillers.py  mcp_server.py  operations.py  picker.py  prompts.py  protocol.py  server.py  trialogue.py  types.py
mole/backends/: __init__.py  generic.py  python.py  typescript.py
skills/mole/: SKILL.md
skills/setup/: SKILL.md
