[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mole-code"
version = "0.1.0"
description = "Dig holes, fill code, grow programs — human-centred assisted programming with typed holes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "xi"},
]
keywords = ["llm", "code-generation", "typed-holes", "tree-sitter", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10,<2.0",
]

[project.optional-dependencies]
pretty = ["rich>=13.0"]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/xidequest/mole"
Repository = "https://github.com/xidequest/mole"

[project.scripts]
mole = "mole.cli:main"

[tool.setuptools.packages.find]
include = ["mole*"]
